--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ExpenseTracker
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5433/
+spring.datasource.url=jdbc:postgresql://localhost:5433/expenseTracker
 spring.datasource.username=postgres
 spring.datasource.password=postgres
