feat: Add Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,13 @@ server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5433/expenseTracker
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=20000
+
+jwt.secret.key=82FBFOJpEz12rk0918O197Kf3yK3pOrE
+# 1 hour in milliseconds
+jwt.time.expiration=3600000
+jwt.issuer=expense-tracker
+
