refactor: Change property data to environment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 spring.application.name=ExpenseTracker
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5433/expenseTracker
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://${DB_URL}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.connection-timeout=20000
-
-jwt.secret.key=82FBFOJpEz12rk0918O197Kf3yK3pOrE
-# 1 hour in milliseconds
-jwt.time.expiration=3600000
+jwt.secret.key=${SECRET_KEY}
+#time in milliseconds
+jwt.time.expiration=${JWT_EXPIRATION}
 jwt.issuer=expense-tracker
 
